# even_any_type

./: Cargo.toml  README.md
src/: lib.rs  main.rs
