[package]
name = "even_any_type"
version = "0.0.5"
edition = "2021"
description = "A lightweight Rust crate providing simple, type-specific methods to check if a value is even."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/even_any_type"
homepage = "https://github.com/yourusername/even_any_type"
documentation = "https://docs.rs/even_any_type"
keywords = ["even", "numeric", "utilities", "traits", "type"]
categories = ["algorithms", "data-structures", "no-std"]
readme = "README.md"
authors = ["Hadrian Lazic <hadrian.lazic@email.com>"]
exclude = ["target/*", "*.lock"]

[dependencies]
